Update gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,31 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+### Editor and IDE artifacts
+.idea/
+.pycharm_helpers/
+.vscode
+
+### OS X artifacts
+*.DS_Store
+.AppleDouble
+:2e_*
+:2e#
+
+### Static assets pipeline artifacts
+*.scssc
+lms/static/css/
+lms/static/certificates/css/
+cms/static/css/
+common/static/common/css/vendor/
+node_modules
+
+### Styling generated from templates
+*/lms/static/sass/*.css
+*/lms/static/sass/*.css.map
+*/lms/static/certificates/sass/*.css
+*/lms/static/css/*
+*/cms/static/css/*
+*/cms/static/sass/*.css
+*/cms/static/sass/*.css.map
